istio-1.2.5/install/kubernetes/jaeger-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15032
        name: http-tracing
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - tracing-gateway
  http:
    - match:
        - port: 15032
      route:
        - destination:
            host: tracing
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-ing
  namespace: istio-system
spec:
  rules:
    - host: raptorslog.jaeger.local
      http:
        paths:
          - path: /
            backend:
              serviceName: tracing
              servicePort: 80
---
