istio-1.2.5/install/kubernetes/kiali-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15029
        name: http-kiali
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - kiali-gateway
  http:
    - match:
        - port: 15029
      route:
        - destination:
            host: kiali
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali-ing
  namespace: istio-system
spec:
  rules:
    - host: raptorslog.kiali.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kiali
              servicePort: 20001
---
